overlay: enable Night Display
Change-Id: Ia8a17d4c2490df8acdaac3610dee62937e345bdc

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -332,4 +332,6 @@
     -->
     <bool name="config_wifiDisplaySupportsProtectedBuffers">true</bool>
 
+    <bool name="config_nightDisplayAvailable">true</bool>
+
 </resources>
